fix the bug of when there is only one search result in browse room on after a search, the map is too big and the post is too small

--- a/application/public/stylesheets/style.css
+++ b/application/public/stylesheets/style.css
@@ -354,7 +354,9 @@ input.card {
   border-radius: 20px;
   /* height: 60rem; */
   height: 90vh;
-  width: 100%;
+  /* width: 100%; */
+  min-width: 30%;
+  max-width: 100%;
   background-color: darkslateblue;
 }
 
